--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -7,7 +7,7 @@
 
 .tab-bar {
   background-color: @tab-bar-background-color;
-  border-bottom: 1px solid @base-border-color;
+  border-bottom: 0;
 
   .tab {
     color: @text-color;
