Style tree-view

--- a/styles/status-bar.less
+++ b/styles/status-bar.less
@@ -10,5 +10,5 @@
   font-size: @font-size;
   color: @text-color;
   border-top: 0;
-  background-color: darken(@tree-view-background-color, 5%);
+  background-color: @tree-view-background-color;
 }
