--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -2,7 +2,7 @@
 @text-color:           hsl(0,0%,66%);
 @text-color-subtle:    hsl(0,0%,50%);
 @text-color-highlight: hsl(0,0%,94%);
-@text-color-selected:  hsl(0,0%,100%);
+@text-color-selected:  #759deb;
 
 @text-color-info:    hsl(219,  79%, 66%);
 @text-color-success: hsl(140,  44%, 62%);
@@ -20,8 +20,8 @@
 @app-background-color:       darken(@base-background-color, 5%);
 
 // Base colors
-@base-background-color: darken(#1c1c38, 2%);
-@base-border-color:     #1c1c38; // red; // darken(@base-background-color, 8%);
+@base-background-color: #0f1125;
+@base-border-color:     #1c1c38;
 
 // Component colors
 @pane-item-background-color: @base-background-color;
@@ -55,6 +55,7 @@
 
 @tree-view-background-color: @base-background-color;
 @tree-view-border-color:     @base-border-color;
+@tree-view-item-hover-bg: #1c1c38; // new var
 
 // Site colors
 @ui-site-color-1: hsl(208, 100%, 50%); // blue
